/*
 * Copyright 2018 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto2";
package android.bluetooth.le;

option java_outer_classname = "BluetoothLEProtoEnums";
option java_multiple_files = true;


// LE ACL Connection State. This as per - go/bluetooth-le-connection-metrics
enum LeAclConnectionState {
  LE_ACL_UNSPECIFIED = 0;
  LE_ACL_SUCCESS = 1;
  LE_ACL_FAILED = 2;
  LE_ACL_ALREADY_PRESENT = 3;
}

// Connection Origin type.
enum LeConnectionOriginType {
  ORIGIN_UNSPECIFIED = 0;
  ORIGIN_NATIVE = 1;
  ORIGIN_JAVA = 2;
}

// LE Connection Type
enum LeConnectionType {
  CONNECTION_TYPE_UNSPECIFIED = 0;
  CONNECTION_TYPE_LE_ACL = 1;
  CONNECTION_TYPE_GATT = 2;
  CONNECTION_TYPE_L2CAP_FIXED_CHNL_SMP = 3;
  CONNECTION_TYPE_L2CAP_FIXED_CHNL_ATT = 4;
  CONNECTION_TYPE_L2CAP_FIXED_CHNL_LE_SIGNALLING = 5;
  CONNECTION_TYPE_L2CAP_FIXED_CHNL_AMP = 6;
  CONNECTION_TYPE_L2CAP_FIXED_CHNL_SMP_BR_EDR = 7;
}

// LE Connection State
enum LeConnectionState {
  STATE_UNSPECIFIED = 0;
  STATE_LE_ACL_START = 1;
  STATE_LE_ACL_END = 2;
  STATE_LE_ACL_CANCEL = 3;
  STATE_LE_ACL_TIMEOUT = 4;
  STATE_GATT_APP_USE_LINK_FLAG = 5;
  STATE_GATT_CREATE_DIRECT_CONN = 6;
  STATE_GATT_HOLD_LINK_EMPTY = 7;
  STATE_GATT_CONNECT_NATIVE = 8;
  STATE_GATT_APP_CREATE_LE_ACL = 9;
  STATE_GATT_CONN_STATE_CHANGE_CLIENT = 10;
  STATE_GATT_CONN_STATE_CHANGE_SERVER = 11;
  STATE_L2CAP_FIXED_CHNL_START_CREATE_CONN = 12;
  STATE_L2CAP_FIXED_CHNL_START_LE_ACL = 13;
  STATE_L2CAP_FIXED_CHNL_LE_ACL_FINISH = 14;
}

